--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,12 +15,21 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
+        buildConfigField "String", "API_URL", '"http://api.test.com"'
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     dataBinding {
@@ -61,4 +70,22 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$archVer"
     kapt "androidx.lifecycle:lifecycle-compiler:$archVer"
 
+    /** Retrofit */
+    def retrofitVer = "2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVer"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVer"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVer"
+
+    /** Okhttp3 */
+    def okhttpVer = "3.13.1"
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVer"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVer"
+
+
+    /** RxJava */
+    def rxJavaVer = "2.2.7"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVer"
+
+    def rxAndroidVer = "2.1.1"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
 }
