--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
 
+        // proguard
+        proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                'proguard-gson.pro',
+                'proguard-retrofit.pro',
+                'proguard-rxjava.pro',
+                'proguard-dagger.pro',
+                'proguard-okhttp.pro',
+                'proguard-rules.pro'
+
         buildConfigField "String", "API_URL", '"http://api.test.com"'
     }
 
@@ -88,4 +97,8 @@ dependencies {
 
     def rxAndroidVer = "2.1.1"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
+
+    def glideVer = "4.9.0"
+    implementation "com.github.bumptech.glide:glide:$glideVer"
+    kapt "com.github.bumptech.glide:compiler:$glideVer"
 }
