--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,13 @@ dependencies {
     def rxAndroidVer = "2.1.1"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
 
+    /** Glide */
     def glideVer = "4.9.0"
     implementation "com.github.bumptech.glide:glide:$glideVer"
     kapt "com.github.bumptech.glide:compiler:$glideVer"
+
+    /** Timber */
+    def timberVer = "4.7.1"
+    implementation "com.jakewharton.timber:timber:$timberVer"
+
 }
