--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     /** Dagger */
-    def daggerVer = "2.21"
+    def daggerVer = "2.24"
     implementation "com.google.dagger:dagger:$daggerVer"
     kapt "com.google.dagger:dagger-compiler:$daggerVer"
 
@@ -73,22 +73,22 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVer"
 
     /** Arch */
-    def archVer = "2.0.0"
+    def archVer = "2.1.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archVer"
     implementation "androidx.lifecycle:lifecycle-runtime:$archVer"
     implementation "androidx.lifecycle:lifecycle-extensions:$archVer"
     kapt "androidx.lifecycle:lifecycle-compiler:$archVer"
 
     /** Retrofit */
-    def retrofitVer = "2.5.0"
+    def retrofitVer = "2.6.2"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVer"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVer"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVer"
 
-    /** Okhttp3 */
-    def okhttpVer = "3.13.1"
-    implementation "com.squareup.okhttp3:okhttp:$okhttpVer"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVer"
+    /** OkHttp3 */
+    def okHttpVer = "3.13.1"
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVer"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVer"
 
 
     /** RxJava */
@@ -99,7 +99,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
 
     /** Glide */
-    def glideVer = "4.9.0"
+    def glideVer = "4.10.0"
     implementation "com.github.bumptech.glide:glide:$glideVer"
     kapt "com.github.bumptech.glide:compiler:$glideVer"
 
@@ -107,4 +107,11 @@ dependencies {
     def timberVer = "4.7.1"
     implementation "com.jakewharton.timber:timber:$timberVer"
 
+    /** Lottie */
+    def lottieVer = "3.0.7"
+    implementation "com.airbnb.android:lottie:$lottieVer"
+
+    /** font awesome */
+    def fontAwesomeVer = "0.0.5"
+    implementation "info.androidhive:fontawesome:$fontAwesomeVer"
 }
