--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
                 'proguard-okhttp.pro',
                 'proguard-rules.pro'
 
-        buildConfigField "String", "API_URL", '"http://api.test.com"'
+        buildConfigField "String", "JSON_PLACEHOLDER_API", '"https://jsonplaceholder.typicode.com/"'
     }
 
     buildTypes {
@@ -62,6 +62,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
+    /** Coroutines */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+
     /** Dagger */
     def daggerVer = "2.24"
     implementation "com.google.dagger:dagger:$daggerVer"
@@ -89,14 +93,6 @@ dependencies {
     def okHttpVer = "3.13.1"
     implementation "com.squareup.okhttp3:okhttp:$okHttpVer"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVer"
-
-
-    /** RxJava */
-    def rxJavaVer = "2.2.7"
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVer"
-
-    def rxAndroidVer = "2.1.1"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
 
     /** Glide */
     def glideVer = "4.10.0"
