--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -30,6 +28,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -51,16 +52,17 @@ android {
 }
 
 dependencies {
+    def ktxVer = "1.2.0-rc01"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
+    implementation "androidx.core:core-ktx:$ktxVer"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
 
     /** Coroutines */
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
@@ -83,8 +85,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$archVer"
     kapt "androidx.lifecycle:lifecycle-compiler:$archVer"
 
+    def roomVersion = "2.2.3"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
     /** Retrofit */
-    def retrofitVer = "2.6.2"
+    def retrofitVer = '2.7.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVer"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVer"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVer"
@@ -104,10 +111,23 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timberVer"
 
     /** Lottie */
-    def lottieVer = "3.0.7"
+    def lottieVer = '3.3.1'
     implementation "com.airbnb.android:lottie:$lottieVer"
 
     /** font awesome */
     def fontAwesomeVer = "0.0.5"
     implementation "info.androidhive:fontawesome:$fontAwesomeVer"
+
+    /** Date and time API for Java */
+    def threetenabpVer = '1.2.1'
+    def threetenbpVer = '1.4.0'
+    implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVer"
+    testImplementation "org.threeten:threetenbp:$threetenbpVer"
+    implementation "androidx.core:core-ktx:$ktxVer"
+
+    /** Fabric and Firebase */
+    def crashlyticsVer = '2.10.1'
+    implementation "com.crashlytics.sdk.android:crashlytics:$crashlyticsVer"
 }
+
+apply plugin: 'com.google.gms.google-services'
